# Sandvox

./: .gitignore  .travis.yml  Cargo.toml  README.md
.github/: dependabot.yml
ci/: before_deploy.sh  install.sh  script.sh
shaders/: frag.glsl  vert.glsl
src/: client.rs  input.rs  main.rs  physics.rs  render.rs
src/shaders/: basic_frag.glsl  frag.glsl  line_frag.glsl  line_vert.glsl  sky_frag.glsl  sky_vert.glsl  vert.glsl  voxel_vert.glsl
